docker/envoy-gateway/resources/resource.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: envoy-gateway-system
  annotations:
    gateway.envoyproxy.io/infrastructure-type: Host
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
    - name: https
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: gateway-cert
            namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - "FULL_FQDN_HERE"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: payment-manager-ui
          port: 8080
          weight: 1
          kind: Backend
          group: gateway.envoyproxy.io
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: ""
      backendRefs:
        - name: experience-api
          port: 3000
          weight: 1
          kind: Backend
          group: gateway.envoyproxy.io
    - matches:
        - path:
            type: PathPrefix
            value: /management-api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: ""
      backendRefs:
        - name: management-api
          port: 9000
          weight: 1
          kind: Backend
          group: gateway.envoyproxy.io
    - matches:
        - path:
            type: PathPrefix
            value: /realms
      backendRefs:
        - name: keycloak
          port: 8085
          weight: 1
          kind: Backend
          group: gateway.envoyproxy.io
    - matches:
        - path:
            type: PathPrefix
            value: /keycloak
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: ""
      backendRefs:
        - name: keycloak
          port: 8080
          weight: 1
          kind: Backend
          group: gateway.envoyproxy.io
